# trinity

./: .gitignore  pyproject.toml  pytest.ini
.migration/assets/: advertisers.json  users.json  xlsx_formulas.json
.migration/assets/ooh/: ooh_coefficients.json  ru_subjects.json
.migration/assets/ooh/mapping/: advertisers.json  formats.json  operators.json  radiostations.json  sides.json  sizes.json
.migration/assets/radio/mapping/: broadcast.json  drivetimes.json  placement.json  radiostations.json  status.json
.migration/assets/tv/: daytypes.json  kz_channels.json  nat_tvc_info.json  reg_tvc_info.json
.migration/src/: app_assets.py  app_settings.py  main.py
.migration/src/bot/: menu.py
.migration/src/bot/utils/: actions.py  sync_executor.py
.migration/src/core/ooh/: analyzer.py  exceptions.py  guardian.py  logic.py  ooh_loader.py  ooh_parser.py  ooh_shield.py  panel.py  report.py  schema.py
.migration/src/core/radio/: exceptions.py  models.py  radio_loader.py  radio_parser.py  report.py
.migration/src/core/utils/: parser.py  tools.py
.migration/src/orm/: databases.py  settings.py  sql_builder.py  sql_queries.py  sql_tables.py
src/trinity/: main.py
src/trinity/core/: outdoor.py
src/trinity/data/mapping/: cities.json  formats.json  locations.json  metro.json  sizes.json
src/trinity/schemas/: outdoor.py  validators.py
src/trinity/services/: exceptions.py  logics.py  models.py  outdoor.py
src/trinity/utils/: tools.py
tests/services/: conftest.py  test_logics.py  test_outdoor.py
tests/utils/: test_tools.py
(+137 files in other folders)
