[project]
name = "trinity"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Prosvirnin",email = "prosvirnin.a@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.30.0,<2.0.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "xlsxwriter (>=3.2.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "trinity", from = "src"}]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

select = ["E", "F", "W", "B", "I"]

ignore = [
    "E203",
]

exclude = [
  ".git",
  "__pycache__",
  ".venv",
]

fix = true

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
